# ghafmt

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  build.rs  deny.toml  knope.toml  renovate.json  rust-toolchain.toml
.changeset/: add-ci-infrastructure.md  add_acknowledgements_and_licence_symlink.md  add_action_metadata_formatting.md  add_cross_platform_binary_builds.md  add_docker_image.md  add_github_action.md  add_macos_intel_build.md  add_macos_signing_and_notarization.md  add_milestone_automation.md  add_nightly_builds.md  add_nightly_manual_trigger.md  add_pre_commit_config.md  add_rust_toolchain_toml.md  bring_in_last_libfyaml_changes.md  code_review_fixes.md  dependabot_pr_127.md  dependency_changeset_workflow.md  dependency_pr_135.md  dependency_pr_137.md  dependency_pr_138.md  dependency_pr_139.md  dependency_pr_141.md  dependency_pr_142.md  dependency_pr_143.md  dependency_pr_144.md  dependency_pr_145.md  fix-block-needs-blank-lines.md  fix_action_mode_flag_and_burn_in_version.md  fix_action_mode_flag_and_remove_version_input.md  fix_bare_if_step_ref_rewrite.md  fix_check_silent_failure_and_improve_multi_file_error_message.md  fix_docker_musl_bindgen_sysroot.md  fix_folded_scalars_emitting_extra_blank_lines.md  fix_licence_detection.md  fix_literal_block_scalar_case_enforcement.md  fix_literal_keep_scalar_double_blank_line.md  fix_prepare_release_cargo_lock.md  fix_prepare_release_pr_title.md  fix_release_tag_creation_and_remove_yq_workaround.md  fix_renovate_changeset_naming.md  (+30 more)
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/scripts/: check_changeset.sh
.github/workflows/: _build_artifacts.yml  _build_docker.yml  code_checks.yml  dependency_changeset.yml  nightly_build.yml  prepare_release.yml  release.yml  renovate_changeset.yml  workflow_checks.yml
src/: cli.rs  constants.rs  errors.rs  fs.rs  lib.rs  main.rs  presentation_pipeline.rs  structure_pipeline.rs  workflow_emitter.rs  workflow_processor.rs
src/commands/: check.rs  format.rs  list.rs  mod.rs  write.rs
src/presentation_transformers/: jobs_blank_lines.rs  mod.rs  steps_blank_lines.rs  top_level_blank_lines.rs  top_level_comment_spacer.rs
src/structure_transformers/: branding_sorter.rs  case_enforcer.rs  concurrency_sorter.rs  container_sorter.rs  environment_sorter.rs  filter_sorter.rs  inputs_sorter.rs  job_sorter.rs  mod.rs  outputs_sorter.rs  runs_on_sorter.rs  runs_sorter.rs  step_sorter.rs  strategy_sorter.rs  (+3 more)
tests/: actionlint_test.rs  cli_test.rs  error_test.rs  idempotency_test.rs  roundtrip_test.rs
(+32 files in other folders)
