[package]
name = "ghafmt"
version = "0.0.0"
edition = "2024"
authors = ["Jonathan Rainer <jonathan@jonathan-rainer.com>"]
rust-version = "1.92.0"
description = "An application that allows for consistent formatting of GitHub Actions workflows"
readme = "README.md"
repository = "https://github.com/jonathanrainer/ghafmt"
license = "GPL-3.0-only"
keywords = ["ci", "github-actions", "format"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
heck = "=0.5.0"
clap = { version = "=4.5.60", features = ["derive"] }
fyaml = "=0.5.0"
miette = { version = "=7.6.0", features = ["fancy"] }
thiserror = "=2.0.18"
similar = "2.7.0"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"
regex = "=1.12.3"
walkdir = "=2.5.0"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
missing_docs_in_private_items = "warn"

[dev-dependencies]
assert_cmd = "=2.0.17"
indoc = "=2.0.7"
predicates = "=3.1.4"
rstest = "=0.26.1"
similar-asserts = "=1.7.0"
tempfile = "=3.27.0"

[patch.crates-io]
fyaml = { git = "https://github.com/jonathanrainer/fyaml", branch = "integration" }
fyaml-sys = { git = "https://github.com/jonathanrainer/fyaml-sys", branch = "integration" }

