[package]
name = "ghafmt"
version = "0.1.4"
edition = "2024"
authors = ["Jonathan Rainer <jonathan@jonathan-rainer.com>"]
rust-version = "1.92.0"
description = "A formatter for GitHub Actions workflow and action metadata files"
readme = "README.md"
repository = "https://github.com/jonathanrainer/ghafmt"
license = "MIT OR Apache-2.0"
keywords = ["ci", "github-actions", "format"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
atomic-write-file = "=0.3.0"
clap = { version = "=4.6.0", features = ["derive"] }
fyaml = "=0.5.0"
heck = "=0.5.0"
miette = { version = "=7.6.0", features = ["fancy"] }
patharg = "=0.4.1"
regex = "=1.12.3"
similar = "=2.7.0"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"
walkdir = "=2.5.0"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
missing_docs_in_private_items = "warn"

[dev-dependencies]
assert_cmd = "=2.2.0"
indoc = "=2.0.7"
predicates = "=3.1.4"
rstest = "=0.26.1"
similar-asserts = "=1.7.0"
tempfile = "=3.27.0"

[patch.crates-io]
fyaml = { git = "https://github.com/jonathanrainer/fyaml", rev = "c4b0b3d8f304eb99c447e3254ea296b163c80e3e" }
fyaml-sys = { git = "https://github.com/jonathanrainer/fyaml-sys", rev = "9ccbc1a05dd4aca4e71ce91fbee114f686ff66ab" }

